# semantic_hierarchical_graph

./: .env  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  build_docker.sh  start_docker.sh
config/: hou2_params.yaml  map_preprocessing.yaml  ryu_params.yaml
data/: hou2_room9_metrics.json  path.json  ryu_floor_metrics.json  ryu_metrics_room11.json  ryu_metrics_room2.json  ryu_path.json  ryu_room11_metrics.json  ryu_room2_metrics.json
data/benchmark_maps/: aws_robomaker_hospital_original.pgm
data/graphs/benchmarks/: graph.yaml  path.json  ryu_path.json
data/graphs/benchmarks/floor/: hou2.yaml  hou2_clean.yaml  ryu.yaml
data/graphs/iras/: graph.yaml
data/graphs/iras/floor/: iras1.pgm  iras1.yaml  iras2.yaml
data/graphs/simulation/: aws_path.json  graph.yaml  graph_turtlebot.yaml
data/graphs/simulation/floor/: aws1.pgm  aws1.yaml  aws2.yaml
path_planner_suite/: IPAStar.py  IPAStarSet.py  IPAutomatedPlannerTest.py  IPBasicPRM.py  IPBenchmark.py  IPEnvironment.py  IPPRMBase.py  IPPerfMonitor.py  IPPlanerBase.py  IPRRT.py  IPSmoothing.py  IPSmoothng.py  IPTestSuite.py  IPVISAStar.py
ros2/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml  setup.cfg  setup.py
ros2/config/: mpo_500_navigation.yaml  nav2_params.yaml  params.yaml  petra_navigation.yaml
ros2/include/shg/: shg_planner.hpp
ros2/launch/: aws_hospital_simulation.launch.py  change_map.sh  graph.launch.py  multiple_floors.launch.py  neobotix_simulation.launch.py  tb3_simulation_launch.py
ros2/shg/: graph_node.py
ros2/src/: shg_planner.cpp
ros2_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_interfaces/srv/: ChangeMap.srv  GetElevatorData.srv  GetNextGoal.srv
semantic_hierachical_graph/: graph.py
semantic_hierarchical_graph/: astar_planner.py  collision_checker.py  environment.py  exceptions.py  floor.py  graph.py  ilir_planner.py  main.py  map_preprocessing.py  map_preprocessing_parameter_tuning.py  metrics.py  metrics_floor.py  metrics_plots.py  node.py  online_map_preprocessing.py  path.py  path_planning.py  roadmap_creation.py  segmentation.py  types.py  utils.py  vector.py  visualization.py  watershed.py
semantic_hierarchical_graph/evaluation/: metrics.py  metrics_floor.py  metrics_plots.py  metrics_plots_all.py
semantic_hierarchical_graph/map_preprocessing/: README.md  edit_maps_from_online_ressources.py  model_preprocessing.py  testing_and_visualize_map_preprocessing.py  tuning_preprocessing_parameters.py  utils_preprocessing.py
semantic_hierarchical_graph/planners/: astar_planner.py  floor_collision_checker.py  ilir_planner.py  planner_conversion.py  planner_interface.py  prm_planner.py  rrt_planner.py  shg_planner.py
semantic_hierarchical_graph/types/: parameter.py  position.py  vector.py
test/: playground.py  test_backend_interface.py  test_graph.py  test_roadmap_iras.py  testing.py
ui_editor/app/: Readme.md  index.html  package-lock.json  package.json
ui_editor/app/src/: App.css  App.tsx
ui_editor/app/src-tauri/: Cargo.toml  tauri.conf.json
ui_editor/app/src/components/dialogs/: AddFloorDialog.tsx  EditFloorDialog.tsx
ui_editor/app/src/components/renderers/: AreaRenderer.tsx  LocationRenderer.tsx
ui_editor/app/src/constants/: LocationTypes.tsx
ui_editor/app/src/state/: EditorContent.ts  EditorState.ts
ui_editor/app/src/test-assets/: map.json
ui_editor/app/src/types/: Area.ts  Floor.ts  Location.ts  Map.ts  Position.ts
ui_editor/app/src/types/rawtypes/: AWS.ts  MapDescriptor.ts  Path.ts  Room.ts
ui_editor/examples/: ryu_path.json
ui_editor/examples/aws/: aws.yaml  aws_graph.json
ui_editor/examples/ryu/: ryu_graph.json
