<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shg</name>
  <version>0.0.0</version>
  <description>Semantic Hierachical Graph for multi-story Navigation</description>
  <maintainer email="andreas.zachariae@gmail.com">Andreas Zachariae</maintainer>
  <license>Creative Commons Attribution-NonCommercial 4.0 International License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
